--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "failed"
+        exceptionFormat "full"
+    }
 }
 
 task downloadFile(type: Download) {
