show test results on build

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging {
-        events "failed"
+        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT", "STANDARD_ERROR"
         exceptionFormat "full"
     }
 }
