publish maven package

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,11 @@ jobs:
 
       - name: Run build
         run: ./gradlew build --stacktrace
+
+      - name: publish maven
+        run: ./gradlew publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
