--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'de.undercouch.download' version '4.1.1'
+    id("maven-publish")
 }
 apply plugin: 'maven'
 apply plugin: 'java'
@@ -13,6 +14,24 @@ repositories {
 
 dependencies {
 	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.0'
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/tbutter/lavf-jni")
+            credentials {
+        username = System.getenv("GITHUB_ACTOR")
+        password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 
 test {
